Changes for GDPR
- Added javascript and local cookies to determine whether user has seen the privacy notice.

- GA script is added dynamically after user opts in or out.

- Privacy entry can be reviewed and changed from 'Privacy' link at the bottom of the page.

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -210,6 +210,13 @@ h6 {
   color: @nats-colour-green-dark;
 }
 
+#gdpr {
+  background-color: @nats-brand-gray-light;
+  color: @text-color;
+  padding: 20px;
+  border-top: solid @nats-brand-gray-dark;
+}
+
 // Social Icons
 .social-icon {
   display: inline-block;
@@ -223,6 +230,14 @@ h6 {
 // Labels
 .label {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.gdpr {
+  background-color: @nats-brand-gray-light;
+  color: black;
+  padding: 20px;
+  border-top: 2px;
+  border-color: black;
 }
 
 // Tables
