styles messed up - changed text as per comments.

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -210,13 +210,6 @@ h6 {
   color: @nats-colour-green-dark;
 }
 
-#gdpr {
-  background-color: @nats-brand-gray-light;
-  color: @text-color;
-  padding: 20px;
-  border-top: solid @nats-brand-gray-dark;
-}
-
 // Social Icons
 .social-icon {
   display: inline-block;
@@ -232,12 +225,12 @@ h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.gdpr {
+#gdpr {
   background-color: @nats-brand-gray-light;
-  color: black;
+  color: @text-color;
   padding: 20px;
-  border-top: 2px;
-  border-color: black;
+  border-top: solid black;
+  opacity: 1.0;
 }
 
 // Tables
