--- a/layouts/partials/gdpr.html
+++ b/layouts/partials/gdpr.html
@@ -1,6 +1,6 @@
 <div id="gdpr" class="hide navbar-fixed-bottom footer">
     <h3>Privacy Policy</h3>
-    We value and respect your privacy. Analytics are used to track consumers of our site and improve it's content. We do no share, sell data to third parties, or link to any personal information on the collected data.
+    We value and respect your privacy. Analytics is used to track consumers of our site and improve its content. We do not share, nor sell data to third parties, nor link to any personal information on the collected data.
     Thank you for your interest in NATS.
     </p>
     <form>
