--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -226,11 +226,17 @@ h6 {
 }
 
 #gdpr {
+  font-size: 70%;
   background-color: @nats-brand-gray-light;
   color: @text-color;
   padding: 20px;
   border-top: solid black;
   opacity: 1.0;
+}
+
+#gdpr > h3 {
+  font-size: 18pt;
+  margin-top: 0
 }
 
 a.dynamic {
